--- a/app/public/styles/app.scss
+++ b/app/public/styles/app.scss
@@ -1,4 +1,4 @@
-@import "/node_modules/bootstrap/scss/bootstrap.scss";
+@import "~bootstrap/scss/bootstrap";
 @import "_variables.scss";
 @import "about.scss";
 
