--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -33,27 +33,12 @@
                             <i class="fa fa-utensils" aria-hidden="true"></i> AAU Food
                         </a>
                         findet man die aktuellen Mittagsmenüs von Lokalen am Campus und das Vergleichen fällt ganz
-                        leicht. So kommt man noch schneller und leichter zu einem wohlverdienten Mittagessen. Es
-                        wird noch fleißig an der Ergänzung der Lokale gearbeitet – wenn ihr allerdings etwas ganz
-                        fest vermisst, schreibt einfach eine Nachricht an <span id="mail">uns</span> und wir tun
+                        leicht. So kommt man noch schneller und leichter zu einem wohlverdienten Mittagessen. Wenn 
+                        ihr allerdings etwas ganz fest vermisst oder mal wieder was nicht funktioniert, schreibt 
+                        uns am Besten auf unserer <a class="nowrap" href="https://github.com/Felfio/AAUFood">
+                            <i aria-hidden="true" class="fab fa-github"></i> GitHub Projektseite</a> und wir tun
                         unser Bestes, eure Wünsche zu erfüllen. Also Mahlzeit und lasst es euch schmecken!</p>
-                    <p class="card-text">
-                        Hinter dem Projekt stehen
-                        <span id="name0"></span>, <span id="name1"></span> und <span id="name2"></span>.
-                        Auf Kristinas Jammern hin, dass es so umständlich ist, das beste Mittagessen zu finden, war die
-                        Grundidee geboren. Fabian und Markus, die besagten Informatiker, haben nicht lange gebraucht
-                        und schon kommt die ganze AAU in den Genuss von
-                        <a class="nowrap" href="/">
-                            <i class="fa fa-utensils" aria-hidden="true"></i> AAU Food
-                        </a>.
-                        Mit der Zeit haben auch
-                        <span id="additionalName0"></span> und <span id="additionalName1"></span> Wind von der Sache
-                        bekommen und fleißig mit angepackt.
-                    </p>
-                    <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
-                        <a class="nowrap" href="https://github.com/Felfio/AAUFood">
-                            <i aria-hidden="true" class="fab fa-github"></i> GitHub Projektseite</a>.
-                    </p>
+                   
                 </div>
             </div>
         </div>
