--- a/app/public/styles/app.scss
+++ b/app/public/styles/app.scss
@@ -24,6 +24,10 @@ body {
   margin-right: 0;
 }
 
+.container {
+  min-height: calc(100vh - 32px);
+}
+
 .break-text {
   &:empty {
     display: none;
@@ -392,4 +396,6 @@ footer {
   position: absolute;
   top: 0;
   left: 0;
+  min-height: 100vh;
+  max-width: 100vw;
 }
