--- a/app/views/partials/common/footer.ejs
+++ b/app/views/partials/common/footer.ejs
@@ -12,15 +12,15 @@
         <%- getFooterPun() %>
     </div>
 
-    <div class="dropup sitemap">
-        <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="dropdown sitemap">
+        <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown"
+            aria-expanded="false">
             <span class="hidden-sm-down">Sitemap</span>
             <i class="fa fa-map-signs"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="/about"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Über AAUFood</a>
             <a class="dropdown-item" href="/print"><i class="fa fa-fw fa-print" aria-hidden="true"></i> Wochensicht</a>
-            <a class="dropdown-item" href="https://felf.io"><i class="fa fa-fw fa-balance-scale" aria-hidden="true"></i> Impressum</a>
         </div>
     </div>
 </footer>
@@ -28,4 +28,5 @@
 <script src="/dist/bundle.js"></script>
 
 </body>
+
 </html>
