--- a/app/views/partials/common/footer.ejs
+++ b/app/views/partials/common/footer.ejs
@@ -21,6 +21,8 @@
         <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="/about"><i class="fa fa-fw fa-users" aria-hidden="true"></i> Über AAUFood</a>
             <a class="dropdown-item" href="/print"><i class="fa fa-fw fa-print" aria-hidden="true"></i> Wochensicht</a>
+            <a class="dropdown-item" href="https://github.com/Felfio/AAUFood"><i class="fa fa-fw fa-code-commit"
+                    aria-hidden="true"></i><span id="version">Version?</span></a>
         </div>
     </div>
 </footer>
